--- a/index.html
+++ b/index.html
@@ -110,42 +110,50 @@
         <!--OurQualities-->
         <section class="section">
             <div class="container">
-                <ul class="our-description">
-                    <li class="our-every-description">
-                        <a href="#">
-                            <svg width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
-                            </svg>
-                        </a>
-                        <h3 class="title" >ATTENTION TO DETAILS</h3>
-                        <p class="description">We go into all the details and processes of your business to develop a customized solution.</p>
+                <ul class="grid">
+                    <li class="grid__items">
+                        <div class="our-qualities">
+                            <a href="#">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                                </svg>
+                            </a>
+                            <h3 class="our-qualities__title" >ATTENTION TO DETAILS</h3>
+                            <p class="our-qualities__description">We go into all the details and processes of your business to develop a customized solution.</p>
+                        </div>
                     </li>
-                    <li class="our-every-description">
-                        <a href="#">
-                            <svg width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-clock-1"></use>
-                            </svg>
-                        </a>
-                        <h3 class="title" >PUNCTUALITY</h3>
-                        <p class="description">With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
+                    <li class="grid__items">
+                        <div class="our-qualities">
+                            <a href="#">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                                </svg>
+                            </a>
+                            <h3 class="our-qualities__title" >PUNCTUALITY</h3>
+                            <p class="our-qualities__description">With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
+                        </div>
                     </li>
-                    <li class="our-every-description">
-                        <a href="#">
-                            <svg width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
-                            </svg>
-                        </a>
-                        <h3 class="title" >PLANNING</h3>
-                        <p class="description">You will be able to observe and participate in every phase of solution development and implementation.</p>
+                    <li class="grid__items">
+                        <div class="our-qualities">
+                            <a href="#">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                                </svg>
+                            </a>
+                            <h3 class="our-qualities__title" >PLANNING</h3>
+                            <p class="our-qualities__description">You will be able to observe and participate in every phase of solution development and implementation.</p>
+                        </div>
                     </li>
-                    <li class="our-every-description">
-                        <a href="#">
-                            <svg width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
-                            </svg>
-                        </a>
-                        <h3 class="title" >MODERN TECHNOLOGIES</h3>
-                        <p class="description">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
+                    <li class="grid__items">
+                        <div class="our-qualities">
+                            <a href="#">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                                </svg>
+                            </a>
+                            <h3 class="our-qualities__title" >MODERN TECHNOLOGIES</h3>
+                            <p class="our-qualities__description">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
