--- a/index.html
+++ b/index.html
@@ -181,140 +181,160 @@
         </section>
         </div>
         <!--OurTeamSection-->
-        <section class="section-our-team section">
+        <section class="section section-four">
             <div class="container">
-                <h2 class="title-our-team">Our Team</h2>
-                <ul class="our-team">
-                    <li class="card-team">
-                        <img class="img-team" src="./images/Christopher Walker-2.jpg" alt="Christopher Walker" width="270" height="260">
-                        <h3 class="title-team">Christopher Walker</h3>
-                        <p class="description-team">Product Designer</p>
-                        <div class="social-media-icons">
-                            <ul class="social-media-icons-list">
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
-                                    </svg>
-                                </a></li>
+                <h2 class="section__title">Our Team</h2>
+                <ul class="grid">
+                    <li class="grid__items">
+                        <div class="our-team">
+                            <img class="our-team__image" src="./images/Christopher Walker-2.jpg" alt="Christopher Walker" width="270" height="260">
+                            <div class="our-team__details">
+                                <h3 class="our-team__title">Christopher Walker</h3>
+                                <p class="our-team__ocupation">Product Designer</p>
+                            </div>
+                            <!-- <div class="social-media-icons"> -->
+                            <ul class="social-media-icons our-team__social-media">
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                            <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                            <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-media__item">
+                                            <a href="#">
+                                            <svg width="20" height="20" fill="#AFB1B8">
+                                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                            <svg width="20" height="20" fill="#AFB1B8">
+                                                <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
                             </ul>
+                            <!-- </div> -->
                         </div>
                     </li>
-                    <li class="card-team">
-                        <img class="img-team" src="./images/Kylie Evans-2.jpg" alt="Kylie Evans" width="270" height="260">
-                        <h3 class="title-team">Kylie Evans</h3>
-                        <p class="description-team">Frontend Developer</p>
-                        <div class="social-media-icons">
-                            <ul class="social-media-icons-list">
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
-                                    </svg>
-                                </a></li>
-                            </ul>
+                    <li class="grid__items">
+                        <div class="our-team">
+                            <img class="our-team__image" src="./images/Kylie Evans-2.jpg" alt="Kylie Evans" width="270" height="260">
+                            <div class="our-team__details">
+                                <h3 class="our-team__title">Kylie Evans</h3>
+                                <p class="our-team__ocupation">Frontend Developer</p>
+                            </div>  
+                            <!-- <div class="social-media-icons"> -->
+                                <ul class="social-media-icons our-team__social-media">
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                                        </svg>
+                                    </a></li>
+                                </ul>
+                            <!-- </div> -->
                         </div>
                     </li>
-                    <li class="card-team">
-                        <img class="img-team" src="./images/Ryan Harris-2.jpg" alt="Ryan Harris" width="270" height="260">
-                        <h3 class="title-team">Ryan Harris</h3>
-                        <p class="description-team">Marketing</p>
-                        <div class="social-media-icons">
-                            <ul class="social-media-icons-list">
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
-                                    </svg>
-                                </a></li>
-                            </ul>
+                    <li class="grid__items">
+                        <div class="our-team">
+                            <img class="our-team__imag" src="./images/Ryan Harris-2.jpg" alt="Ryan Harris" width="270" height="260">
+                            <div class="our-team__details">
+                                <h3 class="our-team__title">Ryan Harris</h3>
+                                <p class="our-team__ocupation">Marketing</p>
+                            </div>
+                            <!-- <div class="social-media-icons"> -->
+                                <ul class="social-media-icons our-team__social-media">
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                                        </svg>
+                                    </a></li>
+                                </ul>
+                            <!-- </div> -->
                         </div>
                     </li>
-                    <li class="card-team">
-                        <img class="img-team" src="./images/Tyler Moore-2.jpg" alt="Tyler Moore" width="270" height="260">
-                        <h3 class="title-team">Tyler Moore</h3>
-                        <p class="description-team">UI Designer</p>
-                        <div class="social-media-icons">
-                            <ul class="social-media-icons-list">
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                                    </svg>
-                                </a></li>
-                                <li class="icon-list-item">
-                                    <a href="#">
-                                    <svg width="20" height="20" fill="#AFB1B8">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
-                                    </svg>
-                                </a></li>
-                            </ul>
+                    <li class="grid__items">
+                        <div class="our-team">
+                            <img class="our-team__imag" src="./images/Tyler Moore-2.jpg" alt="Tyler Moore" width="270" height="260">
+                            <div class="our-team__details">
+                                <h3 class="our-team__title">Tyler Moore</h3>
+                                <p class="our-team__ocupation">UI Designer</p>
+                            </div>
+                            <!-- <div class="social-media-icons"> -->
+                                <ul class="social-media-icons our-team__social-media">
+                                    <li class="icon-list-item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-media__item">
+                                        <a href="#">
+                                        <svg width="20" height="20" fill="#AFB1B8">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                                        </svg>
+                                    </a></li>
+                                </ul>
+                            <!-- </div> -->
                         </div>
                     </li>
                 </ul>
