--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </section>
         </div>
         <!--OurQualities-->
-        <section class="section">
+        <section class="section section-two">
             <div class="container">
                 <ul class="grid">
                     <li class="grid__items">
@@ -183,7 +183,7 @@
         <!--OurTeamSection-->
         <section class="section section-four">
             <div class="container">
-                <h2 class="section__title">Our Team</h2>
+                <h2 class="section__title section-four-title">Our Team</h2>
                 <ul class="grid">
                     <li class="grid__items">
                         <div class="our-team">
@@ -227,7 +227,7 @@
                         </div>
                     </li>
                     <li class="grid__items">
-                        <div class="our-team">
+                        <!-- <div class="our-team"> -->
                             <img class="our-team__image" src="./images/Kylie Evans-2.jpg" alt="Kylie Evans" width="270" height="260">
                             <div class="our-team__details">
                                 <h3 class="our-team__title">Kylie Evans</h3>
@@ -261,11 +261,11 @@
                                     </a></li>
                                 </ul>
                             <!-- </div> -->
-                        </div>
+                        <!-- </div> -->
                     </li>
                     <li class="grid__items">
-                        <div class="our-team">
-                            <img class="our-team__imag" src="./images/Ryan Harris-2.jpg" alt="Ryan Harris" width="270" height="260">
+                        <!-- <div class="our-team"> -->
+                            <img class="our-team__image" src="./images/Ryan Harris-2.jpg" alt="Ryan Harris" width="270" height="260">
                             <div class="our-team__details">
                                 <h3 class="our-team__title">Ryan Harris</h3>
                                 <p class="our-team__ocupation">Marketing</p>
@@ -298,18 +298,18 @@
                                     </a></li>
                                 </ul>
                             <!-- </div> -->
-                        </div>
+                        <!-- </div> -->
                     </li>
                     <li class="grid__items">
-                        <div class="our-team">
-                            <img class="our-team__imag" src="./images/Tyler Moore-2.jpg" alt="Tyler Moore" width="270" height="260">
+                        <!-- <div class="our-team"> -->
+                            <img class="our-team__image" src="./images/Tyler Moore-2.jpg" alt="Tyler Moore" width="270" height="260">
                             <div class="our-team__details">
                                 <h3 class="our-team__title">Tyler Moore</h3>
                                 <p class="our-team__ocupation">UI Designer</p>
                             </div>
                             <!-- <div class="social-media-icons"> -->
                                 <ul class="social-media-icons our-team__social-media">
-                                    <li class="icon-list-item">
+                                    <li class="social-media__item">
                                         <a href="#">
                                         <svg width="20" height="20" fill="#AFB1B8">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -335,7 +335,7 @@
                                     </a></li>
                                 </ul>
                             <!-- </div> -->
-                        </div>
+                        <!-- </div> -->
                     </li>
                 </ul>
             </div>
