--- a/index.html
+++ b/index.html
@@ -160,21 +160,27 @@
         </section>
         </div>
         <!--WhatWeDoSection-->
-        <section class="what-we-do section">
+        <section class="section section-three">
             <div class="container">
-                <h2 class="title-what-we-do">What we do</h2>
-                <ul class="what-we-do-img">
-                    <li class="what-we-do-exemple">
-                        <img src="./images/Tablet and comp 1.jpg" alt="Tablet and comp 1" width="370" height="294">
-                        <p class="what-we-do-description">DESKTOP APPS</p>
+                <h2 class="section__title section-three-title">What we do</h2>
+                <ul class="grid">
+                    <li class="grid__items">
+                        <div class="what-we-do">
+                            <img src="./images/Tablet and comp 1.jpg" alt="Tablet and comp 1" width="370" height="294">
+                            <p class="what-we-do__title">DESKTOP APPS</p>
+                        </div>
                     </li>
-                    <li class="what-we-do-exemple">
-                        <img src="./images/Tablet and comp 2.jpg" alt="Tablet and comp 2" width="370" height="294">
-                        <p class="what-we-do-description">MOBILE APPS</p>
+                    <li class="grid__items">
+                        <div class="what-we-do">
+                            <img src="./images/Tablet and comp 2.jpg" alt="Tablet and comp 2" width="370" height="294">
+                            <p class="what-we-do__title">MOBILE APPS</p>
+                        </div>
                     </li>
-                    <li class="what-we-do-exemple">
-                        <img src="./images/Tablet and comp 3.jpg" alt="Tablet and comp 3" width="370" height="294">
-                        <p class="what-we-do-description">DESIGN SOLUTIONS</p>
+                    <li class="grid__items">
+                        <div class="what-we-do">
+                            <img src="./images/Tablet and comp 3.jpg" alt="Tablet and comp 3" width="370" height="294">
+                            <p class="what-we-do__title">DESIGN SOLUTIONS</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -185,7 +191,7 @@
             <div class="container">
                 <h2 class="section__title section-four-title">Our Team</h2>
                 <ul class="grid">
-                    <li class="grid__items">
+                    <li class="grid__card">
                         <div class="our-team">
                             <img class="our-team__image" src="./images/Christopher Walker-2.jpg" alt="Christopher Walker" width="270" height="260">
                             <div class="our-team__details">
@@ -226,7 +232,7 @@
                             <!-- </div> -->
                         </div>
                     </li>
-                    <li class="grid__items">
+                    <li class="grid__card">
                         <!-- <div class="our-team"> -->
                             <img class="our-team__image" src="./images/Kylie Evans-2.jpg" alt="Kylie Evans" width="270" height="260">
                             <div class="our-team__details">
@@ -263,7 +269,7 @@
                             <!-- </div> -->
                         <!-- </div> -->
                     </li>
-                    <li class="grid__items">
+                    <li class="grid__card">
                         <!-- <div class="our-team"> -->
                             <img class="our-team__image" src="./images/Ryan Harris-2.jpg" alt="Ryan Harris" width="270" height="260">
                             <div class="our-team__details">
@@ -300,7 +306,7 @@
                             <!-- </div> -->
                         <!-- </div> -->
                     </li>
-                    <li class="grid__items">
+                    <li class="grid__card">
                         <!-- <div class="our-team"> -->
                             <img class="our-team__image" src="./images/Tyler Moore-2.jpg" alt="Tyler Moore" width="270" height="260">
                             <div class="our-team__details">
@@ -342,43 +348,49 @@
         </section>
         </div>
         <!--RegularCustomers-->
-        <div class="regular-customers">
+        <section class="section section-five">
             <div class="container">
-                <h2 class="title-regular-customers">Regular customers</h2>
-                <ul class="regular-customers-list">
-                    <li class="card-regular-customers"><a href="#">
+                <h2 class="section-title section-five-title">Regular customers</h2>
+                <ul class="grid">
+                    <li class="grid-customers">
+                        <a href="#">
                         <svg width="106" height="60" fill="#AFB1B8">
                             <use href="./images/symbol-defs.svg#icon-Client-1"></use>
                         </svg>
                     </a></li>
-                    <li class="card-regular-customers"><a href="#">
+                    <li class="grid-customers">
+                        <a href="#">
                         <svg width="106" height="60" fill="#AFB1B8">
                             <use href="./images/symbol-defs.svg#icon-Logo"></use>
                         </svg>
                     </a></li>
-                    <li class="card-regular-customers"><a href="#">
+                    <li class="grid-customers">
+                        <a href="#">
                         <svg width="106" height="60" fill="#AFB1B8">
                             <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
                         </svg>
                     </a></li>
-                    <li class="card-regular-customers"><a href="#">
+                    <li class="grid-customers">
+                        <a href="#">
                         <svg width="106" height="60" fill="#AFB1B8">
                             <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
                         </svg>
                     </a></li>
-                    <li class="card-regular-customers"><a href="#">
+                    <li class="grid-customers">
+                        <a href="#">
                         <svg width="106" height="60" fill="#AFB1B8">
                             <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
                         </svg>
                     </a></li>
-                    <li class="card-regular-customers"><a href="#">
+                    <li class="grid-customers">
+                        <a href="#">
                         <svg width="106" height="60" fill="#AFB1B8">
                             <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
                         </svg>
                     </a></li>
                 </ul>
             </div>
-        </div>
+        </section>
     </main>
     <!--FooterSection-->
     <footer class="footer">
