--- a/index.html
+++ b/index.html
@@ -99,14 +99,12 @@
      </header>
     <main>
         <!--OurMottoSection-->
-        <div class="head-background">
-        <section class="head section">
+        <section class="section section-one">
             <div class="container">
-                <h1 class="head-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+                <h1 class="section__title section-one-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
                 <button data-modal-open class="head-button" type="button">Request our service</button>
             </div>
         </section>
-        </div>
         <!--OurQualities-->
         <section class="section section-two">
             <div class="container">
