--- a/portofolio.html
+++ b/portofolio.html
@@ -44,104 +44,104 @@
      </header>
     <main>
         <!--OurProjectsSection-->
-        <section class="section-portofolio">
+        <section class="section section-portofolio">
             <div class="container">
-                <ul class="button-projects">
+                <ul class="grid grid-projects">
                     <li><button class="button" type="button">All</button></li>
                     <li><button class="button" type="button">Web-sites</button></li>
                     <li><button class="button" type="button">Apps</button></li>
                     <li><button class="button" type="button">Design</button></li>
                     <li><button class="button" type="button">Marketing</button></li>
                 </ul>
-                <ul class="portofolio">
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                <ul class="grid grid-portofolio">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-1.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                            <h3 class="title" >Technoduck</h3>
-                            <p class="description" >Web-site</p>
+                        <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Technoduck</h3>
+                            <p class="grid-description" >Web-site</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-2.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                            <h3 class="title" >Poster New Orlean vs Golden Star</h3>
-                            <p class="description">Design</p>
+                        <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Poster New Orlean vs Golden Star</h3>
+                            <p class="grid-description">Design</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-3.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                           <h3 class="title" >Seafood Restaurant</h3>
-                           <p class="description">Apps</p>
+                        <div class="grid__card-portofolio-lower">
+                           <h3 class="grid-title" >Seafood Restaurant</h3>
+                           <p class="grid-description">Apps</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-4.jpg" alt="">
                          </div>
-                         <div class="card-portofolio-lower">
-                            <h3 class="title" >Project Prime</h3>
-                            <p class="description">Marketing</p>
+                         <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Project Prime</h3>
+                            <p class="grid-description">Marketing</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-5.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                            <h3 class="title" >Project Boxes</h3>
-                            <p class="description">Apps</p>
+                        <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Project Boxes</h3>
+                            <p class="grid-description">Apps</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-6.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                            <h3 class="title" >Inspiration has no Borders</h3>
-                            <p class="description">Web-site</p>
+                        <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Inspiration has no Borders</h3>
+                            <p class="grid-description">Web-site</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-7.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                            <h3 class="title" >Limited Edition</h3>
-                            <p class="description">Design</p>
+                        <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Limited Edition</h3>
+                            <p class="grid-description">Design</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-8.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                            <h3 class="title" >Project LAB</h3>
-                            <p class="description">Marketing</p>
+                        <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Project LAB</h3>
+                            <p class="grid-description">Marketing</p>
                         </div>
                     </li>
-                    <li class="card-portofolio">
-                        <div class="card-portofolio-upper">
+                    <li class="grid__card-portofolio">
+                        <div class="grid__card-portofolio-upper">
                             <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
                             <img class="image-portofolio" src="./images/img-9.jpg" alt="">
                         </div>
-                        <div class="card-portofolio-lower">
-                            <h3 class="title" >Growing Business</h3>
-                            <p class="description">Apps</p>
+                        <div class="grid__card-portofolio-lower">
+                            <h3 class="grid-title" >Growing Business</h3>
+                            <p class="grid-description">Apps</p>
                         </div>
                     </li>
                 </ul>
