--- a/portofolio.html
+++ b/portofolio.html
@@ -7,14 +7,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <!--HeaderClass-->
     <header class="header">    
         <div class="container">
             <div class="header-navigation">
-                <a class="WebStudio-info-header" href="Web">Web<span id="studio1">Studio</span></a>
-                <nav class="nav-link">
+                <a class="header-WebStudio-info" href="Web">Web<span id="studio1">Studio</span></a>
+                <nav class="header-nav-link">
                     <ul class="header-left">
                         <li><a class="page-link" href="./index.html">Studio</a></li>
                         <li><a class="page-link-a" href="./portofolio.html">Portfolio</a></li>
@@ -22,7 +23,7 @@
                     </ul>
                     <ul class="header-right">
                         <li class="header-right-envelope">
-                            <a class="contact-link" href="mailto:info@devstudio.com">
+                            <a class="header-contact-link" href="mailto:info@devstudio.com">
                                 <svg class="header-icons" width="16" height="12">
                                     <use href="./images/symbol-defs.svg#icon-envelope"></use>
                                 </svg>
@@ -30,7 +31,7 @@
                             </a>
                         </li>
                         <li class="header-right-phone">
-                            <a class="contact-link" href="tel:+1 212-772-4150">
+                            <a class="header-contact-link" href="tel:+1 212-772-4150">
                                 <svg class="header-icons" width="10" height="16">
                                     <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                                 </svg> 
