--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <header class="header">    
         <div class="container">
             <div class="header-navigation">
-                <a class="WebStudio-info-header" href="Web">Web<span id="studio1">Studio</span></a>
-                <nav class="nav-link">
+                <a class="header-WebStudio-info" href="Web">Web<span id="studio1">Studio</span></a>
+                <nav class="header-nav-link">
                     <ul class="header-left">
                         <li><a class="page-link-a" href="./index.html">Studio</a></li>
                         <li><a class="page-link" href="./portofolio.html">Portfolio</a></li>
@@ -78,7 +78,7 @@
                     </ul>
                     <ul class="header-right">
                         <li class="header-right-envelope">
-                            <a class="contact-link" href="mailto:info@devstudio.com">
+                            <a class="header-contact-link" href="mailto:info@devstudio.com">
                                 <svg class="header-icons" width="16" height="12">
                                     <use href="./images/symbol-defs.svg#icon-envelope"></use>
                                 </svg>
@@ -86,7 +86,7 @@
                             </a>
                         </li>
                         <li class="header-right-phone">
-                            <a class="contact-link" href="tel:+1 212-772-4150">
+                            <a class="header-contact-link" href="tel:+1 212-772-4150">
                                 <svg class="header-icons" width="10" height="16">
                                     <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                                 </svg> 
